change authentification and add DatabaseInitializer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
-spring.application.name=demo
+spring.application.name=voting
 server.port=9999
+#database.url=jdbc:hsqldb:file:C:/temp/voting
+database.url=jdbc:hsqldb:mem:voting
+spring.datasource.url=jdbc:hsqldb:mem:voting
+database.username=sa
+database.password=
+database.init=true
+jdbc.initLocation=classpath:data.sql
+hibernate.format_sql=true
+hibernate.use_sql_comments=true
+jpa.showSql=true
+springdoc.swagger-ui.path=/
