--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
+	<name>voting</name>
 	<description>Graduate project</description>
 	<url/>
 	<licenses>
@@ -31,6 +31,7 @@
 		<springdoc.version>1.6.2</springdoc.version>
 		<hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
 		<jsoup.version>1.18.1</jsoup.version>
+		<slf4j.version>2.0.13</slf4j.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -104,6 +105,12 @@
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 
 	</dependencies>
