--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,9 +1,8 @@
-database.url=jdbc:hsqldb:file:C:/temp/voting
-
-#database.url=jdbc:hsqldb:mem:voting
+#database.url=jdbc:hsqldb:file:C:/temp/voting
+#
+database.url=jdbc:hsqldb:mem:voting
 database.username=sa
 database.password=
-
 database.init=true
 jdbc.initLocation=classpath:db/initDB_hsql.sql
 jpa.showSql=true
